# open-minds-platform

./: .gitignore  README.md  package-lock.json  pyproject.toml  tailwind.config.js
.github/workflows/: deploy.yml
backend/: README.md  __init__.py  main.py  pyproject.toml  requirements.txt  test_imports.py
backend/api/: __init__.py  routes.py
backend/models/: __init__.py  nova_ai.py  request.py  response.py
backend/services/: __init__.py  ai_service.py  nova_ai.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/: 404.html
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: ChatInterface.tsx  Features.tsx  Hero.tsx  NovaChat.tsx
frontend/src/components/Chat/: ChatContainer.tsx  ChatInput.tsx  ChatInterface.tsx  ChatMessage.tsx  MessageBlock.tsx
frontend/src/components/common/: Button.tsx  Card.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx  MainLayout.tsx  Navbar.tsx  Sidebar.tsx
frontend/src/components/ui/: CodeBlock.tsx  (+4 more)
frontend/src/config/: app.config.ts
frontend/src/context/: ThemeContext.tsx
frontend/src/lib/: utils.ts
frontend/src/pages/: About.tsx  Chat.tsx  Courses.tsx  Home.tsx  Progress.tsx
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
frontend/src/utils/: api.ts
src/: App.tsx
src/components/: Footer.tsx  Navbar.tsx
src/components/common/: Button.tsx  Card.tsx  Input.tsx  ThemeToggle.tsx
src/contexts/: AuthContext.tsx  ThemeContext.tsx
src/pages/: About.tsx  Courses.tsx  Home.tsx
(+3 files in other folders)
