[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nova-ai"
version = "0.1.0"
authors = [
  { name = "Nova AI Team" },
]
description = "Nova AI Assistant"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "python-dotenv>=0.19.0",
    "httpx>=0.23.0",
    "pydantic>=1.8.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["backend"] 